deploy/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-20231222a
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 20231222a.bns.cloud
    secretName: 20231222a-tls
  rules:
  - host: 20231222a.bns.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
